[package]
name = "ssh-server"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["ssh-user", "crypt_sys", "pam_sys"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
uzers = "0.12"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
crypt_sys = { path = "crypt_sys" }

[dependencies.pty-process]
version = "0.5.3"
features = ["async"]

[dependencies.russh]
version = "0.57"
default-features = false
features = ["ring"]

[dependencies.tokio]
version = "1.49"
features = ["full"]
